# ros2_humanoid_virtual_twin

./: CMakeLists.txt  README.md  STEROWANIE.txt  package.xml
Control_txt_files/: Effort_onlyLegcontrol.txt  KneesBending.txt  RightKneeBending.txt  Stable_bend.txt  WavingLefthand.txt  Wavinghand.txt  Wavinghand_kneebend.txt
OLD_files/: OLDHandsONcross.txt  OLDKneebend_handswaving.txt  OLDWalking_bugged.txt  OLDWavinghand.txt  OLDWavinghandandVelocity.txt  OLDzeroVelocity.txt  gazebo_ros2control.launch.py  real_Melman_ros2control.launch.py  test_melman.launch.py
OLD_files/HeadElems/: Head.stl  Head.xacro  Headmount.xacro
OldFiles/: move_leg_onepos.cpp
STLe/: Head-Collision.stl  Left-Ankle-Collision.stl  Left-Arm.stl  Left-Forearm-collision.stl  Left-HipMount.stl  Left-Shank.stl  Left-Thigh.stl  Left_ForeArm.stl  Right-Hip-Collision.stl  Right-Hip.stl  Right-HipMount.stl  Right-Thigh.stl  Trunk-Collision.stl  Trunk.stl  reka2.stl
config/: add_two_ints_client.cpp  add_two_ints_server.cpp  client.cpp  move_leg.cpp  swing_client.cpp  swing_server.cpp
controllers/: controllers.yaml  gazebo_params.yaml  real_control.yaml
description/: Melman_ros2control_gazebo.xacro  imu.xacro  robot.urdf.xacro  robot_core.xacro
description/RobotElements/: Trunk.xacro  head.xacro  left_arm.xacro  left_leg.xacro  right_arm.xacro  right_leg.xacro
description/RobotElements/HeadElems/: Head.xacro  Headmount.xacro  camera.xacro
description/RobotElements/LeftArmElems/: Larm.xacro  Larmmount.xacro  Lforearm.xacro
description/RobotElements/LeftLegElems/: Lankle.xacro  Lfoot.xacro  Lhip.xacro  Lhipmount.xacro  Lshank.xacro  Lthigh.xacro
description/RobotElements/RightArmElems/: Rarm.xacro  Rarmmount.xacro  Rforearm.xacro
description/RobotElements/RightLegElems/: Rankle.xacro  Rfoot.xacro  Rhip.xacro  Rhipmount.xacro  Rshank.xacro  Rthigh.xacro
launch/: gazebo_Melman_ros2control.launch.py  gazebo_ros2control.launch.py  melman.rviz  real_Melman_ros2control.launch.py  rviz_launch.launch.py  rviz_launch.py  rviz_legmoves.launch.py  rviz_legmoves.py  rviz_swingaction.launch.py  sim_launch.launch.py
meshes/: Head-Mounting-Collision.stl  HeadMounting.stl  Left-Ankle.stl  Left-Arm-Collision.stl  Left-Arm.stl  Left-ArmMounting-Collision.stl  Left-ArmMounting.stl  Left-Arm_Collision.stl  Left-Foot-collision.stl  Left-Foot.stl  Left-Hip.stl  Left_ForeArm.stl  Rgiht-HipMount-Collision.stl  Right-Arm.stl  Right-ArmMounting-Collision.stl  Right-ArmMounting.stl  Right-Foot-collision.stl  Right-Foot.stl  Right-HipMount-Collision.stl  Right-Shank-Collision.stl  Right-Shank.stl  Right-Thigh-Collision.stl  Right_Forearm.stl  Trunk-Collision.stl  Trunk.stl  Trunk_Collision.stl
srv/: Legmove.srv  moveleg.srv
worlds/: melman.world  withmelman.world  withoutmelman.world
