<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_humanoid_virtual_twin</name>
  <version>0.0.0</version>
  <description>The repository (will contain) ROS2 files to simulate Melman humanoid robot in Gazebo simulator. Hopefully it will also be compatible to run on a real robot </description>
  <maintainer email="j.mazurkiewicz13@wp.pl">jaku6m</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
